@@ -73,6 +73,7 @@ data_files = [('share/PyCF/',['data/ice.cpt',
                       'progs/plotRSL.py',
                       'progs/plotRSLloc.py',
                       'progs/plotRSLhist.py',
+                      'progs/plotRSLdata.py',
 		      'progs/extractCFstats.py',
                       'progs/ran_topo.py',
 		      'progs/extractTS.py',
